# creatur-realtra.OLD

./: README  README.md  analyseStats.sh  average.sh  averageImage.sh  classification.sh  classifierHistory.sh  config.sh  currentStats.sh  deciderHistory.sh  ordered-logs.sh  pending.sh  popular.sh  realta.cabal  realtra.cabal  summarise.sh  summariseWain.sh  wainErrors.sh
src/ALife/Realtra/: Action.hs  Analyse.hs  Classification.hs  Config.hs  Daemon.hs  ExamineAgent.hs  FMRI.hs  GeneratePopulation.hs  Haar.hs  Image.hs  ImageDB.hs  Photo.hs  Statistics.hs  UnHaar.hs  Universe.hs  Wain.hs
test/: Benchmark.hs  Benchmark2.hs  Main.hs
test/ALife/Realtra/: ActionQC.hs  ClassificationQC.hs  HaarTest.hs  ImageQC.hs  NoHaarTest.hs  TestUtils.hs
