name:                creatur-realtra
version:             0.1.2
synopsis:            Agent for categorising images.
description:         Experiment in analysing Galaxy Zoo data.
homepage:            https://github.com/mhwombat/realtra
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
copyright:           (c) Amy de Buitléir 2013
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable realtra-daemon
  main-is:          ALife/Realtra/Daemon.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  -- other-modules:
  build-depends:
                    array ==0.4.* || ==0.5.*,
                    base ==4.*,
                    cereal ==0.3.* || == 0.4.*,
                    creatur ==4.1.*,
                    creatur-wains ==3.1.*,
                    directory ==1.2.*,
                    hdaemonize ==0.4.*,
--                    list-grouping ==0.1.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    random ==1.0.*,
                    repa ==3.2.*,
                    repa-devil ==0.3.*,
                    som ==6.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    unix ==2.6.* || ==2.7.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable realtra-init
  main-is:          ALife/Realtra/GeneratePopulation.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  -- other-modules:
  build-depends:
                    array ==0.4.* || ==0.5.*,
                    base ==4.*,
                    cereal ==0.3.* || == 0.4.*,
                    creatur ==4.1.*,
                    creatur-wains ==3.1.*,
                    directory ==1.2.*,
 --                   list-grouping ==0.1.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    random ==1.0.*,
                    repa ==3.2.*,
                    repa-devil ==0.3.*,
                    som ==6.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    unix ==2.6.* || ==2.7.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable realtra-examine
  main-is:          ALife/Realtra/ExamineAgent.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    array ==0.4.* || ==0.5.*,
                    base ==4.*,
                    base-unicode-symbols ==0.2.*,
                    cereal ==0.3.* || == 0.4.*,
                    creatur ==4.1.*,
                    creatur-wains ==3.1.*,
                    directory ==1.2.*,
                    grid ==7.* && >7.1,
                    list-grouping ==0.1.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    random ==1.0.*,
                    repa ==3.2.*,
                    repa-devil ==0.3.*,
                    som ==6.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    unix ==2.6.* || ==2.7.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

Test-suite realtra-tests
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  GHC-Options:      -Wall -fno-warn-orphans
  Hs-source-dirs:   test, src
  build-depends:
                    array ==0.4.* || ==0.5.*,
                    base ==4.*,
                    cereal ==0.3.* || == 0.4.*,
                    creatur ==4.1.*,
                    creatur-wains ==3.1.*,
                    directory ==1.2.*,
                    grid ==7.* && >7.1,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    random ==1.0.*,
                    repa ==3.2.*,
                    repa-devil ==0.3.*,
                    som ==6.*,
                    test-framework ==0.8.*,
                    test-framework-hunit ==0.3.*,
                    test-framework-quickcheck2 ==0.3.*,
                    transformers ==0.3.*,
                    QuickCheck ==2.5.*
  Other-modules:    ALife.Realtra.Config
                    ALife.Realtra.ImageQC
