name:                creatur-realtra
version:             1.4.18
synopsis:            Agent for categorising images.
description:         Experiment in analysing Galaxy Zoo data.
homepage:            https://github.com/mhwombat/realtra
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
copyright:           (c) Amy de Buitléir 2013-2014
category:            Data
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/mhwombat/creatur-realtra.git

source-repository this
  type:     git
  location: https://github.com/mhwombat/creatur-realtra.git
  tag:      1.4.18

executable realtra-daemon
  main-is:          ALife/Realtra/Daemon.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  -- other-modules:
  build-depends:
                    array ==0.5.*,
                    base ==4.*,
                    cereal ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.6.3,
                    creatur-wains ==3.8.1,
                    directory ==1.2.*,
                    factory ==0.2.*,
                    filepath ==1.3.*,
                    grid ==7.6.*,
                    hdaemonize ==0.5.*,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    vector ==0.10.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable realtra-init
  main-is:          ALife/Realtra/GeneratePopulation.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  -- other-modules:
  build-depends:
                    array ==0.5.*,
                    base ==4.*,
                    cereal ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.6.3,
                    creatur-wains ==3.8.1,
                    directory ==1.2.*,
                    filepath ==1.3.*,
                    grid ==7.6.*,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    vector ==0.10.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable realtra-examine
  main-is:          ALife/Realtra/ExamineAgent.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    array ==0.5.*,
                    base ==4.*,
                    cereal ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.6.3,
                    creatur-wains ==3.8.1,
                    directory ==1.2.*,
                    filepath ==1.3.*,
                    grid ==7.* && >7.1,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    vector ==0.10.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable realtra-fmri
  main-is:          ALife/Realtra/FMRI.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    array ==0.5.*,
                    base ==4.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    creatur ==5.6.3,
                    creatur-wains ==3.8.1,
                    diagrams-lib ==1.2.*,
                    diagrams-cairo ==1.2.*,
                    directory ==1.2.*,
                    factory ==0.2.*,
                    filepath ==1.3.*,
                    grid ==7.* && >7.1,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    vector ==0.10.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable realtra-photo
  main-is:          ALife/Realtra/Photo.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    array ==0.5.*,
                    base ==4.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    creatur ==5.6.3,
                    creatur-wains ==3.8.1,
                    diagrams-lib ==1.2.*,
                    diagrams-cairo ==1.2.*,
                    directory ==1.2.*,
                    factory ==0.2.*,
                    filepath ==1.3.*,
                    grid ==7.* && >7.1,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    vector ==0.10.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable realtra-haar
  main-is:          ALife/Realtra/Haar.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    base ==4.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    creatur ==5.6.3,
                    creatur-wains ==3.8.1,
                    haar ==0.*,
                    JuicyPixels ==3.1.*,
                    MonadRandom ==0.3.*,
                    som ==7.*,
                    split ==0.2.*,
                    vector ==0.10.*
  hs-source-dirs:   src

executable realtra-unhaar
  main-is:          ALife/Realtra/UnHaar.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    base ==4.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    creatur ==5.6.3,
                    creatur-wains ==3.8.1,
                    haar ==0.*,
                    JuicyPixels ==3.1.*,
                    MonadRandom ==0.3.*,
                    som ==7.*,
                    split ==0.2.*,
                    vector ==0.10.*
  hs-source-dirs:   src

Test-suite realtra-tests
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  GHC-Options:      -Wall -fno-warn-orphans
  Hs-source-dirs:   test, src
  build-depends:
                    array ==0.5.*,
                    base ==4.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.6.3,
                    creatur-wains ==3.8.1,
                    directory ==1.2.*,
                    filepath ==1.3.*,
                    grid ==7.6.*,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    test-framework ==0.8.*,
                    test-framework-hunit ==0.3.*,
                    test-framework-quickcheck2 ==0.3.*,
                    transformers ==0.4.*,
                    vector ==0.10.*,
                    QuickCheck ==2.7.*
  Other-modules:    ALife.Realtra.Config
                    ALife.Realtra.ImageQC

-- Executable realtra-benchmark
--   Main-is:          Benchmark.hs
--   GHC-Options:      -Wall -fno-warn-orphans -auto-all
--   Hs-source-dirs:   test, src
--   Build-Depends:    
--                     base ==4.*,
--                     bytestring ==0.10.*,
--                     cereal ==0.4.*,
--                     cond ==0.4.*,
--                     creatur ==5.6.3,
--                     creatur-wains ==3.8.1,
--                     directory ==1.2.*,
--                     grid ==7.*,
--                     JuicyPixels ==3.1.*,
--                     lens ==4.4.*,
--                     MonadRandom ==0.3.*,
--                     mtl ==2.2.*,
--                     random ==1.1.*,
--                     -- repa ==3.2.*,
--                     -- repa-devil ==0.3.*,
--                     som ==7.*,
--                     temporary ==1.1.*,
--                     time ==1.4.*,
--                     transformers ==0.4.*,
--                     test-framework ==0.8.*,
--                     test-framework-quickcheck2 ==0.3.*,
--                     vector ==0.10.*,
--                     QuickCheck ==2.7.*

-- Executable realtra-benchmark2
--   Main-is:          Benchmark2.hs
--   GHC-Options:      -Wall -fno-warn-orphans -auto-all
--   Hs-source-dirs:   test, src
--   Build-Depends:    
--                     base ==4.*,
--                     bytestring ==0.10.*,
--                     cereal ==0.4.*,
--                     cond ==0.4.*,
--                     creatur ==5.6.3,
--                     creatur-wains ==3.8.1,
--                     directory ==1.2.*,
--                     grid ==7.*,
--                     MonadRandom ==0.3.*,
--                     mtl ==2.2.*,
--                     random ==1.1.*,
--                     repa ==3.2.*,
--                     repa-devil ==0.3.*,
--                     som ==7.*,
--                     temporary ==1.1.*,
--                     time ==1.4.*,
--                     transformers ==0.4.*,
--                     test-framework ==0.8.*,
--                     test-framework-quickcheck2 ==0.3.*,
--                     QuickCheck ==2.7.*
